--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a:hover {
 .cursor2,
 .cursor3{
 	position: fixed;
-	border-radius: 50=%;
+	border-radius: 50%;
 	transform: translateX(-50%) translateY(-50%);
 	pointer-events: none;
 	left: -100px;
